packages/libs/error-stack/tests/snapshots/test_debug__provider_ext@spantrace-glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:#?}\"))"
---
Printable A
│ tests/test_debug.rs:193:38
├─▶ Root error
│   ╰ tests/common.rs:140:5
╰─▶ spantrace with 2 frames (1)
    ╰ tests/common.rs:140:5

Test
│ tests/test_debug.rs:204:39
├─▶ 1 additional attachment
├─▶ Printable B
│   │ tests/test_debug.rs:195:42
│   ├─▶ Root error
│   │   ╰ tests/common.rs:140:5
│   ╰─▶ spantrace with 2 frames (2)
│       ╰ tests/common.rs:140:5
╰─▶ Printable B
    │ tests/test_debug.rs:201:18
    ├─▶ ABC
    │   ╰ tests/test_debug.rs:199:18
    ├─▶ Root error
    │   ╰ tests/common.rs:140:5
    ├─▶ spantrace with 2 frames (3)
    │   ╰ tests/common.rs:140:5
    ╰─▶ 1 additional attachment


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Span Trace No. 1
   [redacted]

Span Trace No. 2
   [redacted]

Span Trace No. 3
   [redacted]
