packages/libs/error-stack/tests/snapshots/test_debug__sources@backtrace-glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
Context A
├╴tests/test_debug.rs:280:10
├╴1 additional attachment
│
╰┬▶ Root error
 │  ├╴tests/common.rs:147:5
 │  ├╴Printable A
 │  ├╴backtrace with [n] frames (1)
 │  ╰╴1 additional attachment
 │
 ├▶ Root error
 │  ├╴tests/common.rs:147:5
 │  ├╴Printable B
 │  ├╴backtrace with [n] frames (2)
 │  ╰╴1 additional attachment
 │
 ╰▶ Root error
    ├╴tests/common.rs:147:5
    ├╴Printable B
    ├╴backtrace with [n] frames (3)
    ╰╴1 additional attachment
