packages/libs/error-stack/tests/snapshots/test_debug__sources@glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
Context A
├╴tests/test_debug.rs:280:10
├╴1 additional attachment
│
╰┬▶ Root error
 │  ├╴tests/common.rs:147:5
 │  ├╴Printable A
 │  ╰╴1 additional attachment
 │
 ├▶ Root error
 │  ├╴tests/common.rs:147:5
 │  ├╴Printable B
 │  ╰╴1 additional attachment
 │
 ╰▶ Root error
    ├╴tests/common.rs:147:5
    ├╴Printable B
    ╰╴1 additional attachment
